--- a/package.json
+++ b/package.json
@@ -2,19 +2,27 @@
   "name": "request_gun",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js > report.txt",
+    "start": "ts-node index.ts",
     "express": "node express.js"
   },
   "keywords": [],
-  "type": "module",
   "author": "Fernando Belotto",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.25.0",
     "cors": "^2.8.5",
     "express": "^4.17.2"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.13",
+    "ts-node": "^10.4.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.5"
   }
 }
